@@ -1,3 +1,8 @@
+2000-05-23  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Mj/MailOut.pm (owner_done): Include bouncing users in
+        subject of bounce detection report.
+
 2000-05-21  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
 
 	* lib/Bf/Parser.pm (parse_exim): Parse exim bounces.
